--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,9 +20,13 @@
     <string name="continue_with_Goggle">Continue with Goggle</string>
     <string name="continue_with_Facebook">Continue with Facebook</string>
     <string name="already_have_account_log_in">Already have account? Log In</string>
+    <string name="daily_inspiration">Daily Inspiration</string>
+    <string name="browse_cuisines">Browse Cuisines</string>
+    <string name="add_to_plan">Add to plan</string>
     <string name="search_for_a_meal">Search for a meal</string>
     <string name="fragment_label_search">Search</string>
     <string name="fragment_label_splash_screen">Splash Screen</string>
     <string name="background_welcome_content_description">Welcome screen background image of a breakfast</string>
     <string name="ic_meal_content_description">Fork and knife icon to represent meal</string>
+    <string name="meal_daily_inspiration_content_description">Meal image</string>
 </resources>
