--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,9 @@
     <string name="background_welcome_content_description">Welcome screen background image of a breakfast</string>
     <string name="ic_meal_content_description">Fork and knife icon to represent meal</string>
     <string name="meal_daily_inspiration_content_description">Meal image</string>
+    <string name="bottom_nav_destination_home">Home</string>
+    <string name="bottom_nav_destination_search">Search</string>
+    <string name="bottom_nav_destination_favorite">Favorite</string>
+    <string name="bottom_nav_destination_plan">Plan</string>
+
 </resources>
