Added UI elements for guest mode.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,8 @@
     <string name="tuesday">Tuesday</string>
     <string name="select_a_date">Select a date</string>
     <string name="no_internet_connection">No internet connection!</string>
+    <string name="no_favorite_meals_for_guest_mode">No favorite meals for guest mode.</string>
+    <string name="no_plans_available_in_guest_mode">No plans available in guest mode.</string>
 
 
 </resources>
